apps/twitch-docs-i18n/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twitch-docs-i18n
  namespace: haenu
  labels:
    app: twitch-docs-i18n
spec:
  selector:
    matchLabels:
      app: twitch-docs-i18n
  template:
    metadata:
      labels:
        app: twitch-docs-i18n
    spec:
      containers:
      - name: twitch-docs-i18n
        image: hyeonwoo5342/twitch-docs-i18n:4
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          limits:
            memory: '100Mi'
            cpu: '50m'
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 25
          periodSeconds: 10
      imagePullSecrets:
      - name: dockerhub-secret
