apps/twitch-docs-i18n/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: twitch-docs-i18n
  namespace: haenu
  labels:
    app: twitch-docs-i18n
spec:
  type: ClusterIP
  ports:
    - port: 3000
  selector:
    app: twitch-docs-i18n
