apps/twitch-docs-i18n/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: twitch-docs-i18n-ingress
  namespace: haenu
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: twitch-docs.haenu.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: twitch-docs-i18n
            port:
              number: 3000
